sumo/tests/sumo/errors/network/edge/lane/root__edge__lane__false11d/errors.sumo
Error: Could not parse shape of lane '1_0'.
 Can not build according edge.
Error: An unknown lane ('1_0') was tried to be set as incoming to junction '2'.
Error: Trying to close connections of an unknown lane ('1_0').
Error: Trying to close connections of an unknown lane ('1_1').
Quitting (on error).
